# Cloud-Soul

./: .gitignore  METHOD.md  README.md  README_de.md  README_es.md  README_fr.md  README_ja.md  README_ru.md  README_zh.md  chat.sh  config  send  start  webchat.sh
research/: rdk_s600_s100_camera.md
scripts/: chat.html  chat.html.bak.20260625_010032  chat.py  web_chat_server.py
src/cs_core/: CMakeLists.txt  package.xml
src/cs_core/include/cs_core/: call_openai.hpp
src/cs_core/launch/: cloud_soul.launch.py  cs_core.launch.py
src/cs_core/src/: agent_loop_node.cpp  call_openai.cpp  memory_node.cpp  mrymt_node.cpp
src/cs_core/test/: a.out  test  test_call_openai.cpp  test_memory.py
src/cs_input/: CMakeLists.txt  package.xml  web_chat_server.py
src/cs_input/launch/: cs_input.launch.py
src/cs_input/src/: input_mgmt.cpp  input_mgmt_node.cpp  message_receive_node.cpp  system_status.cpp  system_status_node.cpp  user_command.cpp
src/cs_input/test/: test_input_mgmt.py  test_message_receive.py  test_system_status.py
src/cs_interfaces/: CMakeLists.txt  package.xml
src/cs_interfaces/action/: ExecuteTool.action
src/cs_interfaces/include/cs_interfaces/: constants.hpp
src/cs_interfaces/msg/: InputInfo.msg
src/cs_interfaces/srv/: GetInputSnapshot.srv  GetToolsInfo.srv  MemoryArchive.srv  MemoryRecall.srv
src/cs_output/: CMakeLists.txt  package.xml
src/cs_output/launch/: cs_output.launch.py
src/cs_output/src/: file_rdwt_node.cpp  file_read.cpp  file_read_node.cpp  file_write.cpp  file_write_node.cpp  message_send_node.cpp  output_mgmt.cpp  output_mgmt_node.cpp  shell_exec.cpp  shell_exec_node.cpp  skills_loader_node.cpp  user_notify.cpp  web_fetch_node.cpp  web_search_node.cpp
src/cs_output/test/: test_file_rdwt.py  test_file_read.py  test_file_write.py  test_message_send.py  test_output_mgmt.py  test_shell_exec.py  test_web_search.py
web_chat/: server.py
