<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cs_input</name>
  <version>1.0.0</version>
  <description>Cloud-Soul: A cloud-memory based multi-device Agent system</description>
  <maintainer email="zxy_yys_leaf@163.com">leaf</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>cs_interfaces</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>cs_interfaces</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>