<?xml version="1.0"?>
<package format="3">
  <name>cs_interfaces</name>
  <version>1.0.0</version>
  <description>Service interfaces for Cloud Soul</description>
  <maintainer email="zxy_yys_leaf@163.com">Leaf</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>